--- a/style.css
+++ b/style.css
@@ -4,46 +4,48 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Regular";
-  src: url("./assets/fonts/GraphikRegular.otf");
-  font-weight: normal;
-  font-style: normal;
+    font-family: "Regular";
+    src: url("./assets/fonts/GraphikRegular.otf");
+    font-weight: normal;
+    font-style: normal;
 }
+
 @font-face {
-  font-family: "Semibold";
-  src: url("./assets/fonts/GraphikSemibold.otf");
-  font-weight: 600;
-  font-style: normal;
+    font-family: "Semibold";
+    src: url("./assets/fonts/GraphikSemibold.otf");
+    font-weight: 600;
+    font-style: normal;
 }
+
 @font-face {
-  font-family: "Medium";
-  src: url("./assets/fonts/GraphikMedium.otf");
-  font-weight: 500;
-  font-style: normal;
+    font-family: "Medium";
+    src: url("./assets/fonts/GraphikMedium.otf");
+    font-weight: 500;
+    font-style: normal;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 html {
-  overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 body {
-  font-family: "Regular";
-  background-color: black;
-  height: 100vh;
-  width: 100vw;
+    font-family: "Regular";
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
 }
 
 .no-scroll {
@@ -51,17 +53,17 @@ body {
 }
 
 div {
-  font-family: "Regular";
+    font-family: "Regular";
 }
 
 h1 {
-  font-family: "Semibold";
-  cursor: cursor;
+    font-family: "Semibold";
+    cursor: cursor;
 }
 
 h2 {
-  font-family: "Semibold";
-  cursor: cursor;
+    font-family: "Semibold";
+    cursor: cursor;
 }
 
 
@@ -71,16 +73,39 @@ h2 {
     height: 400vh;
 }
 
-.loader {
-    position: absolute;
-    background-color: rgb(184, 0, 0);
-    pointer-events: none;
-}
-
 lottie-player {
     background-color: rgb(184, 0, 0);
 }
 
+.loader {
+    position: absolute;
+    background-color: rgb(184, 0, 0);
+    pointer-events: none;
+    padding-left: 10%;
+    justify-content: space-between;
+}
+
+.birthday-wishes-text {
+    color: black;
+    z-index: 2;
+    line-height: min(22vw, 19vh);
+    font-size: min(20vw, 18vh);
+    font-weight: bold;
+}
+
+.gift-text {
+    color: black;
+    z-index: 2;
+    line-height: min(10vw, 9vh);
+    font-size: min(10vw, 9vh);
+}
+
+.domain {
+    line-height: min(15vw, 12vh);
+    font-size: min(10vw, 9vh);
+    text-decoration: underline;
+    font-weight: bold;
+}
 
 .hero-text {
     position: fixed;
@@ -93,18 +118,18 @@ lottie-player {
 
 
 .img {
-  position: fixed;
-  z-index: 1;
-  background-image: url(../assets/adhya.jpg);
-  background-position: left 45%;
-  background-repeat: no-repeat;
-  background-size: 80%;
-  top: 0;
-  right: 0%;
-  left: 45%;
-  bottom: 0;
-  scale: 1;
-  opacity: 0.8;
+    position: fixed;
+    z-index: 1;
+    background-image: url(../assets/adhya.jpg);
+    background-position: left 45%;
+    background-repeat: no-repeat;
+    background-size: 80%;
+    top: 0;
+    right: 0%;
+    left: 45%;
+    bottom: 0;
+    scale: 1;
+    opacity: 0.8;
 }
 
 .hello-text {
@@ -115,7 +140,7 @@ lottie-player {
 .text-video-blend {
     background-color: black;
     background-size: cover;
-    max-width:fit-content;
+    max-width: fit-content;
 }
 
 section {
@@ -137,7 +162,7 @@ section {
     z-index: 0;
     opacity: 0;
     position: absolute;
-    object-fit:cover;
+    object-fit: cover;
 }
 
 .description {
@@ -205,79 +230,84 @@ section {
 }
 
 .description-section {
-    mix-blend-mode:lighten;
+    mix-blend-mode: lighten;
 }
 
 @media screen and (max-width: 1024px) {
-  .img {
-    background-size: cover;
-    left: 50%;
-  }
+    .img {
+        background-size: cover;
+        left: 50%;
+    }
 }
 
 @media screen and (max-width: 767px) {
-  .img {
-    background-size: cover;
-    left: 38%;
-  }
+    .img {
+        background-size: cover;
+        left: 38%;
+    }
 
-  .hero-text {
-    top: 10%;
-    left: 10%;
-  }
+    .hero-text {
+        top: 10%;
+        left: 10%;
+    }
 }
 
 @media screen and (max-width: 550px) {
     .img {
-      background-size: cover;
-      left: 25%;
+        background-size: cover;
+        left: 25%;
     }
 
     .description {
         left: 1%;
     }
-    
+
     .skills-heading {
         left: 1%;
     }
-  }
+}
 
 @media screen and (max-width: 430px) {
-  .img {
-    background-size: cover;
-    left: 12%;
-    top:10%;
-  }
+    .img {
+        background-size: cover;
+        left: 12%;
+        top: 10%;
+    }
 
-  .hero-text {
-    top: 5%;
-    left: 5%;
-  }
+    .hero-text {
+        top: 5%;
+        left: 5%;
+    }
 
-  .skills {
-    padding-bottom: 10%;
-  }
+    .skills {
+        padding-bottom: 10%;
+    }
 
-  .skills-heading {
-    top: 8%;
-  }
+    .skills-heading {
+        top: 8%;
+    }
 
-  .exp-heading {
-    width: 60%;
-    left: 1%;
-    top: 10%;
-    line-height: 18vw;
-  }
+    .exp-heading {
+        width: 60%;
+        left: 1%;
+        top: 10%;
+        line-height: 18vw;
+    }
 
-  .underline-span {
-    margin-top: 5% !important;
-  }
+    .underline-span {
+        margin-top: 5% !important;
+    }
+
+    .loader {
+        padding-left: 2%;
+        justify-content: space-evenly;
+    }
 
 }
 
 @media screen and (max-width: 320px) {
-  .img {
-    background-size: cover;
-    left: 5%;
-  }
+    .img {
+        background-size: cover;
+        left: 5%;
+    }
 }
